# webnovel-scraper

./: .gitignore  LICENSE  README.md  pre-commit.yaml  pyproject.toml
app/: __init__.py  main.py  models.py
app/engine/: __init__.py  client.py  epub.py  rate.py  scraper_engine.py  types.py
app/scrapers/: __init__.py  base.py  freewebnovel.py  novellive.py
output/: Demon_s_Virtue.epub  Demon_s_Virtue_chapter_80_100.epub
responses/novelive_requests/: book_page  chapter_page  get-list-chapter-from-a-chapter-page  next_button_of_chapter_list_table  search_result
scripts/: play_browser.py
